# PeteOmaha

./: .gitignore  CMakeLists.txt  README.md  generate_submission.sh  my_poker_calc.h  parsing.h  peteomaha.c  seven_card_hands.c  starting_hands.h
data/: hand_probabilities
include/: datatypes.h  decision_engine.h  omaha_calc.h  parsing.h  preflop_holes.h  probtables.h  starting_hands.h
lib/: omaha_calc.c  parsing.c  preflop_holes.c  t_probtables.c
pe/include/: eval_astud.h  eval_joker_low8.h  evx7.h
pe/lib/: enumerate.c
pe/lib/unused/: poker_wrapper.c
pregen/: hand_probabilities  test_search.c  test_starting_hands.c
programs/: build_probs_file.c  calc.c  classify_hands.c  hole_probs.c  peteomaha.c  pregen.c  test_search.c  unique_holes.c
programs/old/: count_possible_flops.c  test_search.c
scripts/: hole_probs.sh  hole_probs_job.sh
